Segunda versão do portfólio

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                         
             <div class="absolute top-4 right-4">
                 <select id="lang-select" class="header-lang-select text-base font-semibold text-sky-700 pl-3 py-2 rounded-lg border border-sky-200">
-                    <option value="pt-BR">🇧🇷 Português</option>
-                    <option value="en-US">🇺🇸 English</option>
+                    <option value="pt-BR">🇧🇷 pt-BR</option>
+                    <option value="en-US">🇺🇸 en-US</option>
                 </select>
             </div>
             
