--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="i18n-title">Felipe Gonçalves Denardo | Desenvolvedor Full Stack Sênior</title>
-    
+
     <meta name="description" content="Currículo Interativo de Felipe Gonçalves Denardo - Senior Full Stack Developer. Especialista em desenvolvimento web moderno.">
     <meta name="keywords" content="Felipe Gonçalves Denardo, Full Stack Developer, Desenvolvedor Sênior, Currículo, Portfolio, JavaScript, React, Node.js">
     <meta name="author" content="Felipe Gonçalves Denardo">
@@ -53,7 +53,7 @@
 
             <div class="w-full h-px bg-gray-200 my-4"></div>
 
-            <div id="contact-container" class="flex flex-wrap justify-center gap-x-6 gap-y-2 text-sm text-gray-600">
+            <div id="contact-container" class="flex flex-wrap justify-center gap-x-6 gap-y-2 text-md text-gray-600 pt-2">
                 <!-- Contatos injetados via JS -->
             </div>
         </header>
