--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body class="antialiased py-10">
 
-    <div class="max-w-7xl mx-auto">
+    <div class="max-w-7xl mx-auto px-2">
         
         <header class="bg-white shadow-sm rounded-xl p-8 mb-8 border-t-4 border-sky-600 relative text-gray-900">
                         
@@ -47,7 +47,7 @@
                 <!-- Nome e Cargo -->
                 <div class="flex flex-col items-center">
                     <h1 id="profile-name" class="text-4xl lg:text-5xl font-extrabold tracking-tight text-gray-900 mb-3"></h1>
-                    <h2 id="profile-role" class="text-xl lg:text-2xl font-semibold text-gray-700 m-0"></h2>
+                    <h2 id="profile-role" class="text-xl lg:text-2xl font-semibold text-gray-600 m-0"></h2>
                 </div>
             </div>
 
