--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="i18n-title">Felipe Gonçalves Denardo | Desenvolvedor Full Stack Sênior</title>
+    <title id="i18n-title">Felipe Gonçalves Denardo | Backend Engineer</title>
 
-    <meta name="description" content="Currículo Interativo de Felipe Gonçalves Denardo - Senior Full Stack Developer. Especialista em desenvolvimento web moderno.">
-    <meta name="keywords" content="Felipe Gonçalves Denardo, Full Stack Developer, Desenvolvedor Sênior, Currículo, Portfolio, JavaScript, React, Node.js">
+    <meta name="description" content="Currículo Interativo de Felipe Gonçalves Denardo - Senior Backend Engineer | APIs & Integrações | Microsserviços. Especialista em desenvolvimento web moderno.">
+    <meta name="keywords" content="Felipe Gonçalves Denardo, Full Stack Developer, Desenvolvedor Sênior, Currículo, Portfolio, JavaScript, TypeScript, Backend Engineer, APIs, Integrações, Microsserviços">
     <meta name="author" content="Felipe Gonçalves Denardo">
     
     <meta name="theme-color" content="#0284c7"> <meta property="og:type" content="website">
-    <meta property="og:url" content="https://felipedenardo.github.io/"> <meta property="og:title" content="Felipe Gonçalves Denardo | Senior Full Stack Developer">
+    <meta property="og:url" content="https://felipedenardo.github.io/"> <meta property="og:title" content="Felipe Gonçalves Denardo | Backend Engineer | APIs & Integrações | Microsserviços">
     <meta property="og:description" content="Confira meu currículo interativo e portfólio. Desenvolvedor focado em performance e boas práticas.">
     
     <meta property="og:image" content="https://felipedenardo.github.io/banner-linkedin.png"> 
@@ -18,8 +18,8 @@
     <meta property="og:image:height" content="627">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Felipe Gonçalves Denardo | Senior Full Stack Developer">
-    <meta name="twitter:description" content="Senior Full Stack Developer. Confira meu currículo online.">
+    <meta name="twitter:title" content="Felipe Gonçalves Denardo | Backend Engineer | APIs & Integrações | Microsserviços">
+    <meta name="twitter:description" content="Backend Engineer | APIs & Integrações | Microsserviços. Confira meu currículo online.">
     <meta name="twitter:image" content="https://felipedenardo.github.io/banner-linkedin.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
