--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 
                 <div class="flex flex-col items-center">
                     <h1 id="profile-name" class="text-4xl lg:text-5xl font-extrabold tracking-tight text-gray-900 mb-3"></h1>
-                    <h2 id="profile-role" class="text-xl lg:text-2xl font-semibold text-gray-600 m-0 leading-tight"></h2>
+                    <h2 id="profile-role" class="text-xl lg:text-2xl font-medium text-gray-600 m-0 leading-tight"></h2>
                 </div>
             </div>
 
