--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div
-                class="relative z-10 px-8 py-12 md:py-12 md:px-12 flex flex-col md:flex-row items-center md:items-start text-center md:text-left gap-10">
+                class="relative z-10 px-8 py-12 md:py-12 md:px-12 flex flex-col md:flex-row items-center justify-center text-center md:text-left gap-12">
                 <div class="relative group">
                     <div
                         class="absolute -inset-1 bg-gradient-to-r from-sky-400 to-indigo-500 rounded-full blur opacity-25 group-hover:opacity-75 transition duration-1000 group-hover:duration-200">
@@ -84,7 +84,7 @@
                         src="" alt="Felipe Denardo">
                 </div>
 
-                <div class="flex-1 space-y-4">
+                <div class="space-y-4 text-left">
                     <div>
                         <h1 id="profile-name"
                             class="text-3xl md:text-5xl font-extrabold tracking-tight text-slate-900 mb-4"></h1>
